--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"> <link href="css/styles.css" rel="stylesheet"
+      type="text/css">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="js/scripts.js"></script>
+  <title>Arrays & Looping Number Range Generator</title>
 </head>
 <body>
+  <div class="container">
+  <h1 class="text-primary">Number Range Generator</h1>
+    <form>
+      <label for="number">Enter a number and see the range of values starting from zero up until the number inputted.
+        <br>Numbers containing 1, 2, or 3 will contain a special message!</label>
+        <br>
+        <br>
+        <input type="number" name="number" placeholder="enter a number greater than 0" required aria-required="true"> 
+        <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+      </label>
+    </form>
+    <div>
+      <p id="hidden">Here are your values: </p>
+    </div>
+  </div>
   
 </body>
 </html>
