show more bootstrap styling specifically on input field and button, as well as whole container. Started to work on jquery logic.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         <br>Numbers containing 1, 2, or 3 will contain a special message!</label>
         <br>
         <br>
-        <input type="number" name="number" placeholder="enter a number greater than 0" required aria-required="true"> 
-        <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+        <div class="row">
+        <input id="num1" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
+        <button type="submit" class="btn-primary col-sm-3">Submit</button>
+        </div>
       </label>
     </form>
     <div>
