added console log messages for each step in the for loop and if/else if statements to pinpoint problem. Values are being accepted but the expected results are not being passed into an output string.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br>
         <br>
         <div class="row">
-        <input id="num1" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
+        <input id="numOne" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
         <button type="submit" class="btn-primary col-sm-3">Submit</button>
         </div>
       </label>
