add string literal to append inputResult variable to the body when form is submitted.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
       </label>
     </form>
-    <div>
-      <p id="hidden">Here are your values: </p>
-    </div>
+    <!-- <div id="hidden">
+      <p id="show"></p>
+    </div> -->
   </div>
   
 </body>
