experiment with bootstrap classes and add styling to the page.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="js/scripts3.js"></script>
   <title>Arrays & Looping Number Range Generator</title>
 </head>
-<body>
+<body class="background">
   <div class="container">
   <h1 class="text-primary">Number Range Generator</h1>
     <form>
@@ -34,11 +34,11 @@
         <br>
         <div class="row">
         <input id="numOne" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
-        <button type="submit" class="btn-primary col-sm-3">Submit</button>
+        <button type="submit" class="btn-primary col-sm-3" data-toggle="collapse" data-target="#demo">Submit</button>
         </div>
       </label>
     </form>
-    <!-- <div id="hidden">
+    <!-- <div id="demo">
       <p id="show"></p>
     </div> -->
   </div>
