--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <style>
+    body {
+      background-image: url("https://image.freepik.com/free-vector/background-matrix-style_88211-270.jpg");
+    }
+  </style>
   <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -26,9 +31,9 @@
 </head>
 <body class="background">
   <div class="container">
-  <h1 class="text-primary">Number Range Generator</h1>
+  <h1 class="text-white">Number Range Generator</h1>
     <form>
-      <label for="number">Enter a number and see the range of values starting from zero up until the number inputted.
+      <label for="number" class="text-white font-weight-bold">Enter a number and see the range of values starting from zero up until the number inputted.
         <br>Numbers containing 1, 2, or 3 will contain a special message!</label>
         <br>
         <br>
