--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="js/scripts3.js"></script>
+    <script src="js/scripts.js"></script>
   <title>Arrays & Looping Number Range Generator</title>
 </head>
 <body class="background">
