attempt to show hidden div using append method. console log is working.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
         </div>
       </label>
     </form>
-    <!-- <div id="demo">
-      <p id="show"></p>
-    </div> -->
+    <div id="hidden1">
+    </div>
   </div>
   
 </body>
