show hidden div, now working on revealing other secret images when certain numbers are typed.

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
         <br>
         <br>
         <div class="row">
-        <input id="numOne" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
+        <input id="input" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
         <button type="submit" class="btn-primary col-sm-3" data-toggle="collapse" data-target="#demo">Submit</button>
         </div>
       </label>
     </form>
-    <div id="hidden1">
+    <div id="resultText">
+      <img src="img/ai.jpg" alt="Allen Iverson">
     </div>
   </div>
   
