show first hidden image when number 3 is entered.

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
       </label>
     </form>
     <div id="resultText">
-      <img src="img/ai.jpg" alt="Allen Iverson">
+    </div>
+    <div id="allen">
+      <img src="img/ai.jpg" alt="Allen Iverson">  
+    </div>
+    <div>
+      <img id="jackson" src="img/jacksonfive.jpg" alt="Jackson Five">  
     </div>
   </div>
-  
 </body>
 </html>
