change image revealed if number 8 or 24 is entered.

--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
     </form>
     <div id="resultText">
     </div>
-    <div id="allen">
-      <img src="img/ai.jpg" alt="Allen Iverson">  
+    <div id="mamba">
+      <img src="img/kobe.jpg" alt="Kobe Bryant">  
     </div>
-    <div>
-      <img id="jackson" src="img/jacksonfive.jpg" alt="Jackson Five">  
-    </div>
+    <!-- </div>
+    <div id="jackson">
+      <img src="img/jacksonfive.jpg" alt="Jackson Five">  
+    </div> -->
   </div>
 </body>
 </html>
