add wip reveal button to show more information on button click if numbers 8 or 24 are inputted.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h1 class="text-white">Number Range Generator</h1>
     <form>
       <label for="number" class="text-white font-weight-bold">Enter a number and see the range of values starting from zero up until the number inputted.
-        <br>Numbers containing 1, 2, or 3 will contain a special message!</label>
+        <br>Numbers containing 1, 2, or 3 (and possibly some easter eggs) will contain a special message!</label>
         <br>
         <br>
         <div class="row">
@@ -48,10 +48,9 @@
     <div id="mamba">
       <img src="img/kobe.jpg" alt="Kobe Bryant">  
     </div>
-    <!-- </div>
     <div id="jackson">
-      <img src="img/jacksonfive.jpg" alt="Jackson Five">  
-    </div> -->
+        <button>Reveal More</button>
+    </div>
   </div>
 </body>
 </html>
