try to align image center. margin right and left is set to auto with 50 percent width but it's still not centered like the text is.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="mamba">
       <img src="img/kobe.jpg" alt="Kobe Bryant">  
     </div>
-    <div id="jackson">
+    <div id="reveal">
         <button>Reveal More</button>
     </div>
   </div>
