add boostrap css to new reveal button under kobe image.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     <div id="mamba">
       <img src="img/kobe.jpg" alt="Kobe Bryant">  
     </div>
-    <div id="reveal">
-        <button>Reveal More</button>
-    </div>
+    <form>
+      <button type="submit" id="reveal" class="btn-primary" data-toggle="collapse" data-target="#demo">REVEAL</button>
+    </form>
+    <div id="flip">YOLO</div>
   </div>
 </body>
 </html>
