--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
       crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -48,10 +49,11 @@
     <div id="mamba">
       <img src="img/kobe.jpg" alt="Kobe Bryant">  
     </div>
-    <form>
-      <button type="submit" id="reveal" class="btn-primary" data-toggle="collapse" data-target="#demo">REVEAL</button>
-    </form>
+    <div id="reveal">
+      CLICK HERE TO REVEAL
+      <!-- <button type="submit" id="reveal" class="btn-lg btn-primary" width="200" data-toggle="collapse" data-target="#demo">Reveal</button> -->
+    </div>
     <div id="flip">YOLO</div>
-  </div>
+    </div>
 </body>
 </html>
