--- a/index.html
+++ b/index.html
@@ -32,28 +32,29 @@
 </head>
 <body class="background">
   <div class="container">
-  <h1 class="text-white">Number Range Generator</h1>
-    <form>
-      <label for="number" class="text-white font-weight-bold">Enter a number and see the range of values starting from zero up until the number inputted.
-        <br>Numbers containing 1, 2, or 3 (and possibly some easter eggs) will contain a special message!</label>
-        <br>
-        <br>
-        <div class="row">
-        <input id="input" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
-        <button type="submit" class="btn-primary col-sm-3" data-toggle="collapse" data-target="#demo">Submit</button>
-        </div>
-      </label>
-    </form>
-    <div id="resultText">
-    </div>
-    <div id="mamba">
-      <img src="img/kobe.jpg" alt="Kobe Bryant">  
-    </div>
-    <div id="reveal">
-      CLICK HERE TO REVEAL
-      <!-- <button type="submit" id="reveal" class="btn-lg btn-primary" width="200" data-toggle="collapse" data-target="#demo">Reveal</button> -->
-    </div>
-    <div id="flip">YOLO</div>
-    </div>
+    <h1 class="text-white">Number Range Generator</h1>
+      <form>
+        <label for="number" class="text-white font-weight-bold">Enter a number and see the range of values starting from zero up until the number inputted.
+          <br>Numbers containing 1, 2, or 3 (and possibly some easter eggs) will contain a special message!</label>
+          <br>
+          <br>
+          <div class="row">
+          <input id="input" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
+          <button type="submit" class="btn-primary col-sm-3" data-toggle="collapse" data-target="#demo">Submit</button>
+          </div>
+        </label>
+      </form>
+      <div id="resultText">
+      </div>
+      <div id="mamba">
+        <img src="img/kobe.jpg" alt="Kobe Bryant">  
+      </div>
+      <div>
+        <button type="submit" id="reveal" class="btn-primary btn-lg" data-toggle="collapse" data-target="#demo">REVEAL</button>
+      </div>
+        
+   
+     <div id="flip">YOLO</div>
+  </div>
 </body>
 </html>
