--- a/index.html
+++ b/index.html
@@ -47,14 +47,22 @@
       <div id="resultText">
       </div>
       <div id="mamba">
+        <div >
         <img src="img/kobe.jpg" alt="Kobe Bryant">  
+        </div>
       </div>
-      <div>
+      <div id="reveal">
         <button type="submit" id="reveal" class="btn-primary btn-lg" data-toggle="collapse" data-target="#demo">REVEAL</button>
       </div>
-        
-   
      <div id="flip">YOLO</div>
+     <div class="f1_container">
+      <div class="shadow f1_card">
+          <div class="front face">
+              <img src="http://media-cdn.tripadvisor.com/media/photo-s/03/48/0b/14/dolphin-view-chalets.jpg" style="height: 281px; width: 450px;" />
+          </div>
+          <div class="back face center">Some text inside here</div>
+      </div>
+  </div>
   </div>
 </body>
 </html>
