make image animation work. However, backside of image is not showing a background color with text.

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <div id="resultText">
       </div>
       <div id="mamba" class="mambaContainer">
-        <div class="">
-          <div id="mambafront">
+        <div class="mambaOne">
+          <div class="mambaFace">
             <img src="img/kobe.jpg" alt="Kobe Bryant">  
-            <div class="mambaback">MAMBA FOREVER</div>
+          <div class="mambaBack">MAMBA FOREVER</div>
           </div>
         </div>
       </div>
