show background with text when image is flipped. Still playing around with size of the backside.

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <div class="mambaOne">
           <div class="mambaFace">
             <img src="img/kobe.jpg" alt="Kobe Bryant">  
-          <div class="mambaBack">MAMBA FOREVER</div>
           </div>
+          <div class="mambaFace Back">MAMBA FOREVER</div>
         </div>
+      </div>
       </div>
       <div id="reveal">
         <button type="submit" id="reveal" class="btn-primary btn-lg" data-toggle="collapse" data-target="#demo">REVEAL</button>
       </div>
-     <div id="flip">YOLO</div>
      <!-- <div class="f1_container">
       <div class="shadow f1_card">
           <div class="front face">
