add another image on the reverse side of the kobe image. Reverse side of the flip doesn't match the frontside of the image though.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
           <div class="mambaFace">
             <img src="img/kobe.jpg" alt="Kobe Bryant">  
           </div>
-          <div class="mambaFace Back">MAMBA FOREVER</div>
+          <div class="mambaFace Back">
+            <p>MAMBA FOREVER</p>
+            <img src="img/gianna.jpg" alt="Kobe and Gianna">
+          </div>
+          
         </div>
       </div>
       </div>
