--- a/index.html
+++ b/index.html
@@ -33,43 +33,30 @@
 <body class="background">
   <div class="container">
     <h1 class="text-white">Number Range Generator</h1>
-      <form>
-        <label for="number" class="text-white font-weight-bold">Enter a number and see the range of values starting from zero up until the number inputted.
-          <br>Numbers containing 1, 2, or 3 (and possibly some easter eggs) will contain a special message!</label>
-          <br>
-          <br>
-          <div class="row">
-          <input id="input" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
-          <button type="submit" class="btn-primary col-sm-3" data-toggle="collapse" data-target="#demo">Submit</button>
-          </div>
-        </label>
-      </form>
-      <div id="resultText">
-      </div>
-      <div id="mamba" class="mambaContainer">
-        <div class="mambaOne">
-          <div class="mambaFace">
-            <img src="img/kobe.jpg" alt="Kobe Bryant">  
-          </div>
-          <div class="mambaFace Back">
-            <p>MAMBA FOREVER</p>
-            <img src="img/gianna.jpg" alt="Kobe and Gianna">
-          </div>
-          
+    <form>
+      <label for="number" class="text-white font-weight-bold">Enter a number and see the range of values starting from zero up until the number inputted.
+        <br>Numbers containing 1, 2, or 3 (and some easter eggs - hint: <span style="color:#6a0dad; text-shadow: 2px 2px #f8f88e;">Legends Never Die</span>) will contain a special message!</label>
+        <br>
+        <br>
+        <div class="row">
+        <input id="input" class="col-sm-9" type="number" name="number" min="1" placeholder="enter a number greater than 0" required> 
+        <button type="submit" class="btn-primary col-sm-3" data-toggle="collapse" data-target="#demo">Submit</button>
+        </div>
+      </label>
+    </form>
+    <div id="resultText">
+    </div>
+    <div id="mamba" class="mambaContainer">
+      <div class="mambaOne">
+        <div class="mambaFace">
+          <img src="img/kobe.jpg" alt="Kobe Bryant">  
+        </div>
+        <div class="mambaFace Back">
+          <p>MAMBA FOREVER</p>
+          <img src="img/gianna.jpg" alt="Kobe and Gianna">
         </div>
       </div>
-      </div>
-      <div id="reveal">
-        <button type="submit" id="reveal" class="btn-primary btn-lg" data-toggle="collapse" data-target="#demo">REVEAL</button>
-      </div>
-     <!-- <div class="f1_container">
-      <div class="shadow f1_card">
-          <div class="front face">
-              <img src="http://media-cdn.tripadvisor.com/media/photo-s/03/48/0b/14/dolphin-view-chalets.jpg" style="height: 281px; width: 450px;" />
-          </div>
-      <div class="back face center">Some text inside here</div>
-    </div> -->
-  </div>
+    </div>
   </div>
 </body>
 </html>
